# discord-notifier

./: .gitignore  README.md  main.py  pyproject.toml
discord-notifier/src/: main.py
